force-app/main/default/objects/PM_Performance_Plan__c/PM_Performance_Plan__c.object-meta.xml
<CustomObject>
    <label>Performance Plan</label>
    <nameField>
        <displayFormat>PP{000}</displayFormat>
        <label>Performance Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>