force-app/main/default/objects/PM_Performance_Plan__c/fields/Employee_Plan__c.field-meta.xml
<CustomField>
    <fullName>Employee_Plan__c</fullName>
    <formula>IF( 
AND( 
NOT(ISBLANK($User.Employee_Contact_Id__c)), 
CONTAINS($User.Employee_Contact_Id__c,  Employee__c )), 
TRUE, FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Plan</label>
    <type>Checkbox</type>
</CustomField>