force-app/main/default/objects/PM_Performance_Plan__c/fields/Employee_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Performance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>