force-app/main/default/objects/PM_Performance_Plan__c/fields/Has_Active_Approver__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active Approver</label>
    <type>Checkbox</type>
</CustomField>