force-app/main/default/objects/PM_Performance_Plan__c/fields/Overall_Competency_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Competency_Score__c</fullName>
    <formula>(Overall_Mid_Year_Competency_Score__c +  Overall_Year_End_Competency_Score__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overal Competency Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>