force-app/main/default/objects/PM_Performance_Plan__c/fields/Overall_Goal_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Goal_Score__c</fullName>
    <formula>(Overall_Mid_Year_Goal_Score__c +  Overall_Year_End_Goal_Score__c) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Goal Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>