force-app/main/default/objects/PM_Performance_Plan__c/fields/Overall_Mid_Year_Goal_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Mid_Year_Goal_Score__c</fullName>
    <formula>IF(Total_Mid_Year_Goal_Score__c &gt; 0 , Total_Mid_Year_Goal_Score__c / Total_Number_Goals__c, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Mid Year Goal Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>