force-app/main/default/objects/PM_Performance_Plan__c/fields/Overall_Year_End_Competency_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Year_End_Competency_Score__c</fullName>
    <formula>IF(Total_Number_Competencies__c &gt; 0 , Total_Year_End_Competency_Score__c / Total_Number_Competencies__c, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Year End Competency Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>