force-app/main/default/objects/PM_Performance_Plan__c/fields/Performance_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Performance_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Plan Template</label>
    <referenceTo>PM_Performance_Plan_Template__c</referenceTo>
    <relationshipLabel>Performance Plans</relationshipLabel>
    <relationshipName>Performance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>