force-app/main/default/objects/PM_Performance_Plan__c/fields/Total_Mid_Year_Competency_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Mid_Year_Competency_Score__c</fullName>
    <label>Total Mid Year Competency Score</label>
    <summarizedField>PM_Employee_Competency__c.Mid_Year_Score__c</summarizedField>
    <summaryForeignKey>PM_Employee_Competency__c.Performance_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>