force-app/main/default/objects/PM_Performance_Plan__c/fields/Total_Number_Goals__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Goals__c</fullName>
    <label>Total Number Goals</label>
    <summaryForeignKey>PM_Employee_Goal__c.Performance_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>