force-app/main/default/objects/PM_Performance_Plan__c/fields/Total_Year_End_Goal_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_End_Goal_Score__c</fullName>
    <label>Total Year End Goal Score</label>
    <summarizedField>PM_Employee_Goal__c.Year_End_Score__c</summarizedField>
    <summaryForeignKey>PM_Employee_Goal__c.Performance_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>